# bismarck

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  build.rs  database.sqlite  init.sql
.github/workflows/: rust.yml
akikaze/: Cargo.toml
akikaze/src/: lib.rs  schema.rs  scraper.rs
bismarck_commands/: Cargo.toml
bismarck_commands/src/: info.rs  lib.rs  math.rs  moderation.rs  neko.rs  owner.rs  setup.rs  utilities.rs  wiki.rs  wish.rs
bismarck_core/: Cargo.toml
bismarck_core/src/: context.rs  data.rs  error.rs  lib.rs  types.rs
bismarck_events/: Cargo.toml
bismarck_events/src/: event_handler.rs  lib.rs  on_error.rs
bismarck_utilities/: Cargo.toml
bismarck_utilities/src/: command.rs  git.rs  lib.rs  messages.rs  models.rs  paginate.rs
database-schemas/: DECL.txt  guild.sql  item.sql  tables.txt  user.sql  wish.sql
docs/: index.html
docs/CSS/: style.css
docs/JS/: main.js
math/: Cargo.toml
math/src/: math.rs
migrations/: 0_initial.sql  2023121317210_initial_migration.sql  2024011720220_initial_migration.sql  202402071825_guild_settings.sql  202402071828_modlog.sql  202402071829_user_profile.sql  202402071830_bot_stats.sql  202402071852_wish_simulator_genshin.sql
src/: main.rs
src/commands/: info.rs  math.rs  mod.rs  moderation.rs  neko.rs  owner.rs  setup.rs  utilities.rs  wiki.rs  wish.rs
src/utilities/: command.rs  embeds.rs  event_handler.rs  mod.rs  models.rs  modlog.rs  on_error.rs  paginate.rs  types.rs
src/wish/: wish.rs
website/CSS/: style.css
