[package]
name = "bismarck"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { version = "0.6.1", features = ["cache"] }
serenity = { version = "0.12.0", default-features = false,features = ["rustls_backend", "chrono", "framework"]}
serde = "1.0.195"
serde_json = "1.0.111"
tracing = "0.1.40"
tracing-subscriber = "^0.3"
dotenv = "^0.15.0"
chrono = "0.4.31"
git2 = "0.18.1"
tokio = { version = "1.35.1", features = ["macros", "signal", "rt-multi-thread"] }
rustrict = "0.7.20"
sqlx = { version = "0.7.3", "features" = [
    "macros",
    "migrate",
    "chrono",
    "runtime-tokio",
    "runtime-tokio-rustls",
    "sqlite",
    "sqlx-sqlite",
] }
reqwest = { version = "0.11.23", features = ["json"] }
lazy_static = "1.4.0"
dashmap = "^5.5.3"
uuid = { version = "1.7.0", features = ["v4"] }
duration-str = "0.7.1"
