[package]
name = "bismarck"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/serenity-rs/poise/", branch = "current", features = ["cache"] }
serenity = { version = "^0.12.1", default-features = false, features = ["rustls_backend", "chrono", "gateway"] }
serde = "^1.0.197"
serde_json = "^1.0.114"
tracing = "^0.1.40"
tracing-subscriber = "^0.3"
dotenv = "^0.15.0"
chrono = "^0.4.34"
git2 = "^0.18.2"
tokio = { version = "^1.36.0", features = ["macros", "signal", "rt-multi-thread"] }
rustrict = "^0.7.21"
sqlx = { version = "^0.7.3", "features" = [
    "macros",
    "migrate",
    "chrono",
    "runtime-tokio",
    "runtime-tokio-rustls",
    "sqlite",
    "sqlx-sqlite",
] }

sysinfo = "0.30.7"
reqwest = { version = "0.12.0", features = ["json"] }
lazy_static = "1.4.0"
dashmap = "^5.5.3"
uuid = { version = "1.7.0", features = ["v4"] }
duration-str = "0.8.0"

rand = "0.8"


[profile.release]
opt-level = 3

[build]
rustflags = ["-Z", "threads=8", "target-cpu=native"]
