[package]
name = "bismarck"
version = "0.0.1"
edition = "2021"

[workspace]
members = [ "akikaze",
    "bismarck_commands",
    "bismarck_core",
    "bismarck_events",
    "bismarck_utilities"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = { workspace = true }
poise = { workspace = true }
serenity = { workspace = true }
sqlx = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

akikaze = { path = "akikaze" }
bismarck_commands = { path = "bismarck_commands" }
bismarck_core = { path = "bismarck_core" }
bismarck_events = { path = "bismarck_events" }
bismarck_utilities = { path = "bismarck_utilities" }

[workspace.dependencies]
poise = { git = "https://github.com/serenity-rs/poise/", branch = "current", features = ["cache"] }
serenity = { version = "^0.12.2", default-features = false, features = ["rustls_backend", "chrono", "gateway"] }
serde = "^1.0.203"
serde_json = "^1.0.120"
tracing = "^0.1.40"
tracing-subscriber = "^0.3"
dotenv = "^0.15.0"
chrono = "^0.4.34"
git2 = "^0.20.0"
tokio = { version = "^1.36.0", features = ["macros", "signal", "rt-multi-thread"] }
rustrict = "^0.7.21"
sqlx = { version = "^0.8.0", "features" = [
    "macros",
    "migrate",
    "chrono",
    "runtime-tokio",
    "runtime-tokio-rustls",
    "sqlite",
    "sqlx-sqlite",
] }


sysinfo = "^0.33.0"
reqwest = { version = "^0.12.5", features = ["json"] }
lazy_static = "^1.4.0"
dashmap = { git = "https://github.com/xacrimon/dashmap", branch = "master" }
uuid = { version = "1.9.1", features = ["v4"] }
duration-str = "0.12.0"

futures = "^0.3.30"

rand = "^0.8"


[profile.release]
opt-level = 3

[build]
rustflags = ["-Z", "threads=8", "-C", "target-cpu=native"]
