[package]
name = "bismarck_commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = { workspace = true }
duration-str = { workspace = true }
poise = { workspace = true }
serenity = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
git2 = { workspace = true }
reqwest = { workspace = true }
sysinfo = { workspace = true }
tracing = { workspace = true }

rand = { workspace = true }

bismarck_utilities = { path = "../bismarck_utilities" }
bismarck_core = { path = "../bismarck_core" }