[package]
name = "bismarck_events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { workspace = true }
serenity = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

bismarck_utilities = { path = "../bismarck_utilities" }
bismarck_core = { path = "../bismarck_core" }
